--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,8 @@ input[type="file"] {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.owl-theme .owl-nav{
+    text-align: right!important;
+    margin-right: 10px !important;
+}
